[1/2] Add bluetooth triggers to profiles
Renamed WifiTriggerFragment to TriggersFragment as it is used by
multiple trigger types
Made AbstractTriggerPreference used by multiple trigger types
Renamed some strings to make more sense

Make sure the configured triggers are shown even if type is disabled.
E.g. when Wi-Fi is disable listing AccessPoints does not work for
triggers, already configured triggers will still be shown.

Change-Id: Ife78269586aa2ab7fa94d3462582e259f9228ab2
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/cm_arrays.xml
	res/values/cm_strings.xml
	src/com/android/settings/profiles/ProfileConfig.java

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2755,4 +2755,11 @@
         <item>1</item>
     </string-array>
 
+    <!--  Values for profile trigger types -->
+    <string-array name="profile_trigger_filters" translatable="false">
+        <item>@string/profile_trigger_filter_all</item>
+        <item>@string/profile_trigger_filter_wifi</item>
+        <item>@string/profile_trigger_filter_bluetooth</item>
+    </string-array>
+
 </resources>
