--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -76,19 +76,11 @@
             android:summary="@string/auto_hide_statusbar_summary"
             android:defaultValue="false" /> 
 
-     <CheckBoxPreference
-            android:key="hidden_statusbar_pulldown"
-            android:title="@string/hidden_statusbar_pulldown_title"
-            android:summary="@string/hidden_statusbar_pulldown_summary"
+	<CheckBoxPreference
+            android:key="status_bar_quick_peek"
+            android:title="@string/statusbar_quick_peek_title"
+            android:summary="@string/statusbar_quick_peek_summary"
             android:defaultValue="false" />
-
-     <ListPreference
-            android:key="hidden_statusbar_pulldown_timeout"
-            android:entries="@array/hidden_statusbar_pulldown_timeout_entries"
-            android:entryValues="@array/hidden_statusbar_pulldown_timeout_values"
-            android:title="@string/hidden_statusbar_pulldown_timeout_title"
-            android:summary="@string/hidden_statusbar_pulldown_timeout_summary"
-            android:dependency="hidden_statusbar_pulldown" />
 
         <CheckBoxPreference
             android:key="status_bar_brightness_control"
