--- a/res/xml/misc_settings.xml
+++ b/res/xml/misc_settings.xml
@@ -46,4 +46,11 @@ limitations under the License.
             android:fragment="com.android.settings.cyanogenmod.RamBar"
             android:title="@string/ram_bar" />
 
+     <ListPreference
+            android:key="clear_recents_position"
+            android:title="@string/clear_recents_position_title"
+            android:entries="@array/clear_recents_position_entries"
+            android:entryValues="@array/clear_recents_position_values"
+            android:defaultValue="0" />
+
 </PreferenceScreen>
