Appbar: Add a title summary > no more visual pain Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Ia1fa7ae44dc3745acd464fe810af985b6f8d4970

--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -42,6 +42,7 @@
     <PreferenceScreen
         android:key="app_sidebar"
         android:fragment="com.android.settings.beanstalk.AppSidebar"
+	android:summary="@string/app_sidebar_title_summary"
         android:title="@string/app_sidebar_title" />
 
     <PreferenceScreen
