--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1660,36 +1660,27 @@
         <item>1</item>
     </string-array>
 
-    <!-- App sidebar -->
-    <string-array name="app_sidebar_position_entries" translatable="false">
-        <item>@string/app_sidebar_position_left</item>
-        <item>@string/app_sidebar_position_right</item>
+   <!-- App sidebar -->
+    <string-array name="app_sidebar_sort_type_entries">
+        <item>Sort A->Z</item>
+        <item>Sort Z->A</item>
     </string-array>
-    <string-array name="app_sidebar_position_values" translatable="false">
+
+    <string-array name="app_sidebar_sort_type_values">
         <item>0</item>
         <item>1</item>
     </string-array>
 
-    <string-array name="tab_position_entries">
-        <item>Top</item>
-        <item>Middle</item>
-        <item>Bottom</item>
-    </string-array>
-    <string-array name="tab_position_entryValues">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-    </string-array>
-
-    <string-array name="tab_size_entries">
+    <string-array name="app_sidebar_size_entries">
         <item>Small</item>
-        <item>Medium</item>
+        <item>Normal</item>
         <item>Large</item>
     </string-array>
-    <string-array name="tab_size_entryValues">
-        <item>1.0</item>
-        <item>1.5</item>
-        <item>2.0</item>
+
+    <string-array name="app_sidebar_size_values">
+        <item>67</item>
+        <item>100</item>
+        <item>133</item>
     </string-array>
 
     <!-- Quick pulldown -->
