--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -109,6 +109,13 @@
         <attr name="margin" format="dimension" />
     </declare-styleable>
 
+    <declare-styleable name="SeekBarDialogPreference">
+        <attr name="max" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="prefix" format="string" />
+        <attr name="suffix" format="string" />
+    </declare-styleable>
+
     <declare-styleable name="QuadNumberPickerPreference">
         <attr name="defaultValue1" format="integer" />
         <attr name="defaultValue2" format="integer" />
@@ -134,12 +141,5 @@
         <attr name="pickerTitle2" format="string" />
         <attr name="pickerTitle3" format="string" />
         <attr name="pickerTitle4" format="string" />
-    </declare-styleable>
-
-    <declare-styleable name="SeekBarDialogPreference">
-        <attr name="max" format="integer" />
-        <attr name="min" format="integer" />
-        <attr name="unitsLeft" format="string" />
-        <attr name="unitsRight" format="string" />
     </declare-styleable>
 </resources>
