--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2723,6 +2723,7 @@
         <item>@string/halo_purple</item>
         <item>@string/halo_red</item>
         <item>@string/halo_yellow</item>
+        <item>@string/halo_pink</item>
         <item>@string/halo_black</item>
     </string-array>
 
@@ -2734,6 +2735,7 @@
         <item>4</item>
         <item>5</item>
         <item>6</item>
+        <item>7</item>
     </string-array>
 
     <!--  Values for profile Wi-Fi triggers -->
