Make HALO depend on PIE 2/2 Signed-off-by: scotthartbti <scott@ubuntu.com>
Change-Id: I62b65fe2c23f51edf6153dea3b14289be7d2ad3c

--- a/res/xml/halo.xml
+++ b/res/xml/halo.xml
@@ -23,6 +23,12 @@
             android:title="@string/halo_enabled_title"
             android:summary="@string/halo_enabled_summary" />
 
+	<CheckBoxPreference
+            android:key="halo_pie_only"
+            android:title="@string/halo_pie_only_title"
+            android:summary="@string/halo_pie_only_summary"
+            android:dependency="halo_enabled" />
+
         <ListPreference
             android:key="halo_state"
             android:dialogTitle="@string/halo_state_title"
