Settings: activate qs and notifications toggle for navring (2/2)
Change-Id: I967b247d6f0586715d1fd825b6872e5d3d2eb075
Signed-off-by: scotthartbti <scott@ubuntu.com>

Conflicts:
	src/com/android/settings/cyanogenmod/NavRingTargets.java

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2136,7 +2136,9 @@
         <item>@string/google_now</item>
         <item>@string/kill_app</item>
         <item>@string/lastapp</item>
+        <item>@string/notifications</item>
         <item>@string/open_ime_switcher</item>
+        <item>@string/quicksettings</item>
         <item>@string/ring_silent</item>
         <item>@string/ring_vib</item>
         <item>@string/ring_vib_silent</item>
@@ -2151,7 +2153,9 @@
         <item>**assist**</item>
         <item>**kill**</item>
         <item>**lastapp**</item>
+        <item>**notifications**</item>
         <item>**ime**</item>
+        <item>**quicksettings**</item>
         <item>**ring_silent**</item>
         <item>**ring_vib**</item>
         <item>**ring_vib_silent**</item>
