Add option to hide music controls in lockscreen Signed-off-by: scotthartbti <scott@ubuntu.com>
Change-Id: Ifcee610041a846e6355a76016bafbb8e9b354cf5

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -101,6 +101,12 @@
         android:key="lockscreen"
         android:title="LockScreen Custom Apps">
 
+     <CheckBoxPreference
+        android:key="lockscreen_music_controls"
+        android:persistent="false"
+        android:title="@string/lockscreen_music_controls_title"
+        android:summary="@string/lockscreen_music_controls_summary" />
+
      <Preference
         android:fragment="com.android.settings.cyanogenmod.LockscreenTargets"
         android:key="lockscreen_targets"
