Settings: External GPS Support (1/2)
- Ported feature from CM9
- Fixed string/arrays files
- Removed translation

Submitted on behalf of a third-party: Cuong Bui

Change-Id: I5590b23a6539ae0a9b2fb8a07eed5fabdf290cbf
Signed-off-by: scotthartbti <scott@ubuntu.com>

Conflicts:
	res/values/cm_arrays.xml
	res/values/cm_strings.xml
	res/values/config.xml

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -51,5 +51,8 @@
          Setting to false will disable Home button Wake support -->
     <bool name="config_show_homeWake">false</bool>
 
+    <!-- GPS support. Some devices does not have GPS. -->
+    <bool name="has_location_gps">true</bool>
+
     <!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
