--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2782,4 +2782,12 @@
         <item>@string/profile_trigger_filter_bluetooth</item>
     </string-array>
 
+<!-- GPS source selection -->
+   <string-array name="location_entries_gps_source">
+       <item>Use Internal GPS</item>
+   </string-array>
+   <string-array name="location_values_gps_source" translatable="false">
+       <item>0</item>
+   </string-array>
+
 </resources>
