--- a/res/xml/misc_settings.xml
+++ b/res/xml/misc_settings.xml
@@ -46,6 +46,12 @@ limitations under the License.
             android:fragment="com.android.settings.cyanogenmod.RamBar"
             android:title="@string/ram_bar" />
 
+     <CheckBoxPreference
+            android:key="recents_ram_circle"
+            android:title= "@string/circle_ram_title"
+            android:summary= "@string/circle_ram_summary"
+            android:defaultValue="false" />
+
      <ListPreference
             android:key="clear_recents_position"
             android:title="@string/clear_recents_position_title"
