[WIP] Settings: AutoSmsReply while in QuietHours
Freshly redone, just bare with me...

Change-Id: Ib2cf397478d987672bb791de7d4bbe50aa8abbfa
Signed-off-by: scotthartbti <scott@ubuntu.com>

Conflicts:
	res/values/arrays.xml
	res/values/strings.xml
	res/xml/quiet_hours_settings.xml
	src/com/android/settings/cyanogenmod/BootReceiver.java
	src/com/android/settings/cyanogenmod/QuietHours.java

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2304,6 +2304,19 @@
         <item>500|50</item>
     </string-array>
 
+    <!-- QuietHours AutoSMS response -->
+    <string-array name="auto_sms_entries" translatable="false">
+        <item>@string/quiet_hours_auto_disabled</item>
+        <item>@string/quiet_hours_auto_enabled</item>
+        <item>@string/quiet_hours_auto_contacts</item>
+    </string-array>
+
+    <string-array name="auto_sms_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
  <string-array name="lcd_density_entries" translatable="false">
         <item>160</item>
         <item>182</item>
