--- a/res/xml/quick_settings_panel_settings.xml
+++ b/res/xml/quick_settings_panel_settings.xml
@@ -34,10 +34,12 @@
             android:title="@string/title_collapse_panel"
             android:summary="@string/summary_collapse_panel" />
 
-	<CheckBoxPreference
+	<ListPreference
             android:key="no_notifications_pulldown"
             android:title="@string/title_no_notifications_pulldown"
-            android:summary="@string/summary_no_notifications_pulldown" />
+            android:entries="@array/no_notifications_pulldown_entries"
+            android:entryValues="@array/no_notifications_pulldown_values"
+            android:persistent="false" />
 
         <PreferenceScreen
             android:key="quicksettings_tiles_style"
