--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1349,6 +1349,19 @@
         <item>10000</item>
     </integer-array>
 
+    <!-- AutoHide StatusBar -->
+    <string-array name="entries_auto_hide_statusbar">
+        <item>@string/auto_hide_statusbar_off</item>
+        <item>@string/auto_hide_statusbar_nonperm</item>
+        <item>@string/auto_hide_statusbar_all</item>
+    </string-array>
+
+    <string-array name="values_auto_hide_statusbar" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- QuickSettings tiles per row -->
     <string-array name="tiles_per_row_entries" translatable="false">
         <item>3</item>
