--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -70,11 +70,12 @@
             android:summary="@string/mms_breath_summary"
             android:defaultValue="false" />
 
-	<CheckBoxPreference
+	<ListPreference
             android:key="status_bar_auto_hide"
             android:title="@string/auto_hide_statusbar"
-            android:summary="@string/auto_hide_statusbar_summary"
-            android:defaultValue="false" /> 
+            android:entries="@array/entries_auto_hide_statusbar"
+            android:entryValues="@array/values_auto_hide_statusbar"
+            android:persistent="false" />
 
 	<CheckBoxPreference
             android:key="status_bar_quick_peek"
