Touchkey light duration preference.  Needs overlay.
Needs an overlay added in the device source and will only work
if your touchkey driver supports this function.  Overlay goes
in the settings/res/values/config.xml file as follows:
<bool name="config_show_touchKeyDur">true</bool>

Change-Id: If5b4710df9fc1c4f181627d496f1ee08254cf6b7
Signed-off-by: scotthartbti <scott@ubuntu.com>

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -54,5 +54,7 @@
     <!-- GPS support. Some devices does not have GPS. -->
     <bool name="has_location_gps">true</bool>
 
-    <!-- **** CYANOGENMOD ADDITIONS END **** -->
+    <!-- TouchKey Duration Pref -->
+    <bool name="config_show_touchKeyDur">false</bool>
+
 </resources>
