Added Quiet Hours Ringer option (2/3)
Change-Id: I0b6cf5a2000d73eac54155c89f36831adf355c03
Signed-off-by: Noah Greene <chevycam94@gmail.com>
Signed-off-by: scotthartbti <scott@ubuntu.com>

Conflicts:
	res/values/strings.xml

--- a/res/xml/quiet_hours_settings.xml
+++ b/res/xml/quiet_hours_settings.xml
@@ -45,6 +45,11 @@
         android:dependency="quiet_hours_enabled" />
 
     <CheckBoxPreference
+        android:key="quiet_hours_ringer"
+        android:title="@string/quiet_hours_ringer_title"
+        android:dependency="quiet_hours_enabled" />
+
+    <CheckBoxPreference
         android:key="quiet_hours_haptic"
         android:title="@string/quiet_hours_haptic"
         android:summaryOn="@string/quiet_hours_haptic_on"
