--- a/res/xml/halo.xml
+++ b/res/xml/halo.xml
@@ -56,6 +56,7 @@
             android:key="halo_size"
             android:dialogTitle="@string/halo_size_title"
             android:title="@string/halo_size_title"
+            android:dependency="halo_enabled"
             android:entries="@array/entries_halo_size"
             android:entryValues="@array/values_halo_size" />
 
