First pass at generic hardware tunables support
With support for vibrator intensity and kcal

Change-Id: Ice3444b31a9ab0a25cf25bebb18351e2c08a70c3
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	AndroidManifest.xml
	res/values/cm_strings.xml
	res/xml/display_settings.xml
	src/com/android/settings/DisplaySettings.java
	src/com/android/settings/cyanogenmod/BootReceiver.java

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -77,6 +77,13 @@
                 android:title="@string/wifi_display_settings_title"
                 android:fragment="com.android.settings.wfd.WifiDisplaySettings" />
 
+        <com.android.settings.cyanogenmod.DisplayColor
+                android:key="color_calibration"
+                android:title="@string/color_calibration_title"
+                android:dialogTitle="@string/color_calibration_title"
+                android:summary="@string/color_calibration_summary"
+                android:persistent="false" />
+
         <PreferenceCategory
             android:key="category_wakeup_options"
             android:title="@string/display_category_wakeup_options_title"/>
