--- a/res/xml/quick_settings_panel_settings.xml
+++ b/res/xml/quick_settings_panel_settings.xml
@@ -33,6 +33,11 @@
             android:key="collapse_panel"
             android:title="@string/title_collapse_panel"
             android:summary="@string/summary_collapse_panel" />
+        
+        <CheckBoxPreference
+            android:key="floating_window"
+            android:title="@string/title_floating_window"
+            android:summary="@string/summary_floating_window" />
 
 	<ListPreference
             android:key="no_notifications_pulldown"
