Revert all the tunable crap.  Not for this build.  We will be keeping the advanced device settings for now. Signed-off-by: scott <scott@ubuntu.com>
Change-Id: If562034686af0c31a268b544f33a80f0e115e9fd

--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -12,6 +12,13 @@
             android:title="@string/lcd_density_title"
             android:summary="@string/lcd_density_summary" />
 
+	<ListPreference
+            android:key="touchkey_light_timeout"
+            android:dialogTitle="@string/touchkey_timeout_title"
+            android:title="@string/touchkey_timeout_title"
+            android:entries="@array/entries_touchkey_timeout"
+            android:entryValues="@array/values_touchkey_timeout" />	
+
         <CheckBoxPreference
             android:key="use_alt_resolver"
             android:title="@string/alt_resolver"
