--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -50,4 +50,8 @@
     <!-- Home button Wake Support. Some devices do not support this.
          Setting to false will disable Home button Wake support -->
     <bool name="config_show_homeWake">false</bool>
+
+    <!-- TouchKey Duration Pref -->
+    <bool name="config_show_touchKeyDur">false</bool>
+
 </resources>
