Fix previous commits. Signed-off-by: scott <scott@ubuntu.com>
Change-Id: I4ba0fc22c830c6288051b0a5bcfcc237e729ff4e

--- a/res/layout/preference_dialog_fontsize.xml
+++ b/res/layout/preference_dialog_fontsize.xml
@@ -31,8 +31,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/value"
-                settings:min="0.85"
-                settings:max="1.30"
+                settings:minl="0.85"
+                settings:maxl="1.30"
                 settings:defaultValue="1.00"
                 settings:digits="2"
                 android:padding="20dip"
