--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -144,8 +144,8 @@
     </declare-styleable>
 
     <declare-styleable name="IntervalSeekBar">
-        <attr name="min" format="float" />
-        <attr name="max" format="float" />
+        <attr name="minl" format="float" />
+        <attr name="maxl" format="float" />
         <attr name="defaultValue" format="float" />
         <attr name="digits" format="integer" />
     </declare-styleable>
