Settings: add development animation transition mode 0.75
Change-Id: Iaaeb3757ef9b3b97d66d929629e9035ab511f72a

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -798,6 +798,7 @@
     <string-array name="window_animation_scale_entries">
         <item>Animation off</item>
         <item>Animation scale .5x</item>
+        <item>Animation scale .75x</item>
         <item>Animation scale 1x</item>
         <item>Animation scale 1.5x</item>
         <item>Animation scale 2x</item>
@@ -809,6 +810,7 @@
     <string-array name="window_animation_scale_values" translatable="false" >
         <item>0</item>
         <item>.5</item>
+        <item>.75</item>
         <item>1</item>
         <item>1.5</item>
         <item>2</item>
@@ -820,6 +822,7 @@
     <string-array name="transition_animation_scale_entries">
         <item>Animation off</item>
         <item>Animation scale .5x</item>
+        <item>Animation scale .75x</item>
         <item>Animation scale 1x</item>
         <item>Animation scale 1.5x</item>
         <item>Animation scale 2x</item>
@@ -831,6 +834,7 @@
     <string-array name="transition_animation_scale_values" translatable="false" >
         <item>0</item>
         <item>.5</item>
+        <item>.75</item>
         <item>1</item>
         <item>1.5</item>
         <item>2</item>
@@ -842,6 +846,7 @@
     <string-array name="animator_duration_scale_entries">
         <item>Animation off</item>
         <item>Animation scale .5x</item>
+        <item>Animation scale .75x</item>
         <item>Animation scale 1x</item>
         <item>Animation scale 1.5x</item>
         <item>Animation scale 2x</item>
@@ -853,6 +858,7 @@
     <string-array name="animator_duration_scale_values" translatable="false" >
         <item>0</item>
         <item>.5</item>
+        <item>.75</item>
         <item>1</item>
         <item>1.5</item>
         <item>2</item>
