--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -722,6 +722,9 @@
         <item>play audio</item>
         <item>read clipboard</item>
         <item>modify clipboard</item>
+        <item>wifi change</item>
+        <item>bluetooth change</item>
+        <item>data change</item>
     </string-array>
 
     <!-- User display names for app ops codes -->
@@ -757,6 +760,9 @@
         <item>Play audio</item>
         <item>Read clipboard</item>
         <item>Modify clipboard</item>
+        <item>Wifi change</item>
+        <item>Bluetooth change</item>
+        <item>Data change</item>
     </string-array>
 
     <!-- Titles for the list of long press timeout options. -->
