--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2926,6 +2926,30 @@
         <item>0</item>
     </string-array>
 
+    <string-array name="entries_halo_notification_count">
+        <item>@string/halo_notification_count_none</item>
+        <item>@string/halo_notification_count_total</item>
+        <item>@string/halo_notification_count_individual</item>
+        <item>@string/halo_notification_count_both</item>
+    </string-array>
+
+    <string-array name="values_halo_notification_count">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+    <string-array name="entries_halo_msgbox_animation">
+        <item>@string/halo_msgbox_animation_none</item>
+        <item>@string/halo_msgbox_animation_flip</item>
+    </string-array>
+
+    <string-array name="values_halo_msgbox_animation">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!--  Values for profile Wi-Fi triggers -->
     <string-array name="profile_trigger_wifi_options" translatable="false">
         <item>@string/profile_trigger_connect</item>
