--- a/res/xml/halo.xml
+++ b/res/xml/halo.xml
@@ -47,6 +47,38 @@
             android:defaultValue="true" />
 
 	<CheckBoxPreference
+            android:key="halo_ninja"
+            android:title="@string/halo_ninja_title"
+            android:summary="@string/halo_ninja_summary"
+	    android:dependency="halo_enabled"
+            android:defaultValue="false" />
+
+        <ListPreference
+            android:key="halo_notify_count"
+            android:dialogTitle="@string/halo_notification_count_title"
+            android:title="@string/halo_notification_count_title"
+            android:summary="@string/halo_notification_count_summary"
+            android:entries="@array/entries_halo_notification_count"
+	    android:dependency="halo_enabled"
+            android:entryValues="@array/values_halo_notification_count" />
+
+        <CheckBoxPreference
+            android:key="halo_msgbox"
+            android:title="@string/halo_notification_msgbox_title"
+            android:summary="@string/halo_notification_msgbox_summary"
+	    android:dependency="halo_enabled"
+            android:defaultValue="true" />
+
+        <ListPreference  
+            android:key="halo_msgbox_animation"
+            android:dialogTitle="@string/halo_msgbox_animation_title"
+            android:title="@string/halo_msgbox_animation_title"
+            android:summary="@string/halo_msgbox_animation_summary"
+            android:entries="@array/entries_halo_msgbox_animation"
+            android:entryValues="@array/values_halo_msgbox_animation"
+	    android:dependency="halo_enabled" />
+
+	<CheckBoxPreference
             android:key="halo_pause"
             android:title="@string/halo_pause_title"
             android:summary="@string/halo_pause_summary"
@@ -66,6 +98,13 @@
             android:summary="@string/halo_colors_summary"
             android:dependency="halo_enabled"
             android:defaultValue="false" />
+
+	<CheckBoxPreference
+	    android:key="halo_unlock_ping"
+	    android:title="@string/halo_unlock_ping_title"
+	    android:summary="@string/halo_unlock_ping_summary"
+	    android:dependency="halo_enabled"
+	    android:defaultValue="false" />
 
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="halo_circle_color"
