--- a/res/xml/misc_settings.xml
+++ b/res/xml/misc_settings.xml
@@ -41,18 +41,24 @@ limitations under the License.
             android:entryValues="@array/pref_low_battery_warning_policy_values"
             android:defaultValue="3" />
 
-     <PreferenceScreen
+     	<CheckBoxPreference
+            android:key="notification_show_wifi_ssid"
+            android:title="@string/notification_show_wifi_ssid_title"
+            android:summary="@string/notification_show_wifi_ssid_summary"
+            android:defaultValue="false" />
+
+     	<PreferenceScreen
             android:key="recents_ram_bar"
             android:fragment="com.android.settings.cyanogenmod.RamBar"
             android:title="@string/ram_bar" />
 
-     <CheckBoxPreference
+     	<CheckBoxPreference
             android:key="recents_ram_circle"
             android:title= "@string/circle_ram_title"
             android:summary= "@string/circle_ram_summary"
             android:defaultValue="false" />
 
-     <ListPreference
+     	<ListPreference
             android:key="clear_recents_position"
             android:title="@string/clear_recents_position_title"
             android:entries="@array/clear_recents_position_entries"
