Fix up active display options layout.  (Fixes force close) Signed-off-by: scott <scott@ubuntu.com>
Change-Id: I5ba46e771895ccf7e437f0bfb51ee788906cb636

--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -72,7 +72,7 @@
     <!-- Active display -->
     <PreferenceScreen
         android:key="active_display"
-        android:fragment="com.android.settings.chameleonos.ActiveDisplaySettings"
+        android:fragment="com.android.settings.beanstalk.ActiveDisplaySettings"
         android:title="@string/ad_settings_title"
         android:summary="@string/ad_settings_summary">
     </PreferenceScreen>
