--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -149,4 +149,9 @@
         <attr name="defaultValue" format="float" />
         <attr name="digits" format="integer" />
     </declare-styleable>
+
+    <declare-styleable name="SeekBarPreference">
+        <attr name="unitsLeft" format="string" />
+        <attr name="unitsRight" format="string" />
+     </declare-styleable>
 </resources>
