Follow the current layout for security options. Signed-off-by: scott <scott@ubuntu.com>
Change-Id: Iaa3aa4fe3c0c393b1068163bacce5f70fe7634a0

--- a/res/xml/security_settings_app_cyanogenmod.xml
+++ b/res/xml/security_settings_app_cyanogenmod.xml
@@ -39,7 +39,8 @@
 
 	<Preference
         android:id="@+id/permissions_settings"
-        android:title="@string/permissions_settings_title">
+        android:title="@string/permissions_settings_title"
+        android:summary="@string/permissions_summary">
         <intent
             android:action="android.intent.action.MAIN"
             android:targetPackage="org.chameleonos.permissionsmanager"
