AOKP custom system animations (2/2)
ported fom here: http://gerrit.aokp.co/#/c/12305/

Thanks to Steve Spear

Change-Id: Ic93fc795c4600784a423f2e9b5b1984c7aabb7cb
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	AndroidManifest.xml
	res/values/cm_strings.xml
	res/xml/system_ui_settings.xml
	src/com/android/settings/SettingsPreferenceFragment.java

Conflicts:
	res/values/strings.xml

--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -55,6 +55,12 @@
         android:title="@string/notification_drawer_title" />
 
     <PreferenceScreen
+        android:id="@+id/animations"  
+        android:title="@string/title_animation_controls"  
+        android:summary="@string/header_summary_animation"  
+        android:fragment="com.android.settings.cyanogenmod.fragments.AnimationControls" />
+
+    <PreferenceScreen
         android:key="misc_menu"
         android:fragment="com.android.settings.cyanogenmod.MiscSettings"
         android:title="@string/misc_settings_title" />
