Revert "appops first draft"
This became useless, appops are now accesible trough Privacy Guard Manager

This reverts commit 9a43b135cd5c7e6e9a527960126beb47b2656027.

Change-Id: I09a9589d17525d3b31ee581fc719a6e888c5d9ee
Signed-off-by: Dan Trifan <jimsth@gmail.com>
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	res/values/strings.xml
	res/xml/security_settings_app_cyanogenmod.xml

--- a/res/xml/security_settings_app_cyanogenmod.xml
+++ b/res/xml/security_settings_app_cyanogenmod.xml
@@ -32,11 +32,6 @@
             android:title="@string/blacklist_title"
             android:fragment="com.android.settings.blacklist.BlacklistSettings" />
 
-        <Preference android:fragment="com.android.settings.applications.AppOpsSummary"
-            android:id="@+id/appops_settings"
-            android:title="@string/appops_settings_title"
-            android:summary="@string/appops_settings_summary"/>
-
 	<Preference
         android:id="@+id/permissions_settings"
         android:title="@string/permissions_settings_title"
@@ -46,6 +41,12 @@
             android:targetPackage="org.chameleonos.permissionsmanager"
             android:targetClass="org.chameleonos.permissionsmanager.activity.PermissionManagerActivity" />
 	</Preference>
+
+         <Preference
+            android:fragment="com.android.settings.vanir.fragments.PrivacyGuardManager"
+            android:key="privacy_guard_manager"
+            android:summary="@string/privacy_guard_manager_summary"
+            android:title="@string/privacy_guard_manager_title" />
 
         <ListPreference
             android:key="sms_security_check_limit"
