--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -56,6 +56,7 @@
         <item>5 minutes</item>
         <item>10 minutes</item>
         <item>30 minutes</item>
+	<item>Never</item>
     </string-array>
 
     <!-- Do not translate. -->
@@ -74,6 +75,8 @@
         <item>600000</item>
         <!-- Do not translate. -->
         <item>1800000</item>
+	<!-- Do not translate. -->
+        <item>2147483647</item>
     </string-array>
 
     <!-- Display settings.  The delay in inactivity before the dream is shown. These are shown in a list dialog. -->
@@ -1542,8 +1545,8 @@
     </string-array>
 
     <string-array name="entries_screentimeout_widget">
-        <item>15s | 1m | 5m</item>
-        <item>30s | 2m | 5m</item>
+        <item>15s | 1m | 5m | Never</item>
+        <item>30s | 2m | 5m | Never</item>
     </string-array>
 
     <string-array name="values_screentimeout_widget" translatable="false">
