--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -57,9 +57,16 @@
     <PreferenceCategory
         android:title="@string/status_bar_network_title">
 
+	<CheckBoxPreference
+            android:key="status_bar_traffic"
+            android:title="@string/show_network_speed"
+            android:summary="@string/show_network_speed_summary"
+            android:defaultValue="false" />
+
        <CheckBoxPreference
             android:key="status_bar_show_network_stats"
             android:title="@string/status_bar_show_network_stats_title"
+	    android:summary="@string/status_bar_show_network_stats_summary"
             android:defaultValue="false" />
 
         <ListPreference
@@ -73,8 +80,7 @@
 	<net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="status_bar_network_color"
             android:title="@string/status_bar_network_color_title"
-            android:defaultValue="@android:color/holo_blue_light"
-            android:dependency="status_bar_show_network_stats" />
+            android:defaultValue="@android:color/holo_blue_light" />
 
     </PreferenceCategory>
 
