--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -103,4 +103,15 @@
         android:summary="@string/wakeup_when_plugged_unplugged_summary"
         android:defaultValue="true" />
 
+    <PreferenceCategory
+        android:key="smart_cover_category"
+        android:title="@string/smart_cover_category_title">
+
+        <CheckBoxPreference
+             android:key="smart_cover_wake"
+             android:title="@string/smart_cover_wake_title"
+             android:summary="@string/smart_cover_wake_summary" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
