Lockscreen battery level around unlock ring Signed-off-by: scott <scott@ubuntu.com>
Change-Id: I9cbe2ff9c2a9ebb7d43920d43a659d644c5f2f94

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -68,6 +68,11 @@
     </PreferenceScreen>
 
      <CheckBoxPreference
+        android:key="battery_around_lockscreen_ring"
+        android:title="@string/battery_around_lockscreen_ring"
+        android:defaultValue="true" />
+
+     <CheckBoxPreference
         android:key="lockscreen_auto_rotate"
         android:title="@string/lockscreen_auto_rotate_title"
         android:summary="@string/lockscreen_auto_rotate_summary" />
