density changer overhaul Signed-off-by: scott <scott@ubuntu.com>
Change-Id: Id5b3777dcf2793cd34ed7fb5fba4127c47aab940

--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -7,7 +7,8 @@
         android:fragment="com.android.settings.cyanogenmod.WidgetsSettings"
         android:title="@string/navbar_widgets_title" /> 
 
-        <Preference
+        <PreferenceScreen
+           android:fragment="com.android.settings.cyanogenmod.DensityChanger" 
             android:key="lcd_density_setup"
             android:title="@string/lcd_density_title"
             android:summary="@string/lcd_density_summary" />
