--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2500,7 +2500,8 @@
         <item>2</item>
     </string-array>
 
- <string-array name="lcd_density_entries" translatable="false">
+    <!-- LCD Density -->
+    <string-array name="lcd_density_entries" translatable="false">
         <item>160</item>
         <item>182</item>
         <item>200</item>
@@ -2510,7 +2511,7 @@
         <item>268</item>
         <item>280</item>
         <item>300</item>
-        <item>320</item>
+        <item>@string/stock_density</item>
         <item>340</item>
         <item>@string/custom_density</item>
     </string-array>
