--- a/res/xml/lcd_density_setup.xml
+++ b/res/xml/lcd_density_setup.xml
@@ -4,7 +4,8 @@
 
     <Preference
         android:title="@string/follow_through_title"
-        android:summary="@string/follow_through_summary" />
+        android:summary="@string/follow_through_summary"
+        android:selectable="false" />
 
     <ListPreference
         android:entries="@array/lcd_density_stock_entries"
@@ -20,7 +21,13 @@
 
     <Preference
         android:key="clear_market_data"
-        android:title="@string/clear_market_data_title" />
+        android:title="@string/clear_market_data_title"
+        android:summary="@string/clear_market_data_summary" />
+
+    <Preference
+        android:key="reboot_cleardata"
+        android:title="@string/reboot_cleardata_title"
+        android:summary="@string/reboot_cleardata_summary" />
 
     <Preference
         android:key="open_market"
@@ -34,4 +41,4 @@
         android:title="@string/custom_density_title"
         android:summary="@string/custom_density_summary" />
 
-</PreferenceScreen>
+</PreferenceScreen> 
