Add halo floating options Signed-off-by: scott <scott@ubuntu.com>
Change-Id: I2a614861b23c4566e9e5b489f9d80d9e8ee5e522

--- a/res/xml/halo.xml
+++ b/res/xml/halo.xml
@@ -84,6 +84,13 @@
             android:summary="@string/halo_pause_summary"
             android:dependency="halo_enabled" />
 
+	<CheckBoxPreference
+            android:key="show_popup"
+            android:title="@string/popups_title"
+            android:summary="@string/popups_summary"
+            android:defaultValue="true"
+	    android:dependency="halo_enabled" />
+
 	<ListPreference
             android:key="halo_size"
             android:dialogTitle="@string/halo_size_title"
