Option to enable Notification Light when screen is on (2/2) Signed-off-by: scott <scott@ubuntu.com>
Change-Id: Ie1c0dc71976264f08e2a3bacae017c9a0955bf15

--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -98,6 +98,12 @@
         android:title="@string/notification_pulse_title"
         android:fragment="com.android.settings.notificationlight.NotificationLightSettings" />
 
+    <CheckBoxPreference
+        android:key="screen_on_notification_led"
+        android:title="@string/screen_on_notification_led_title"
+        android:summary="@string/screen_on_notification_led_summary"
+        android:defaultValue="true" />
+
   <!--  	<ListPreference
             android:key="kill_app_longpress_timeout"
             android:title="@string/kill_app_longpress_timeout"
